envoy-static.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:  
        address: 0.0.0.0 
        port_value: 10000 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: my-http-clients
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"] #host/authority header to match the virtual hostname
              routes:
              - match: 
                  prefix: "/httpbin"
                route: 
                  cluster: httpbin
                  prefix_rewrite: "/"
          
  - name: listener_tcp    
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 11000
    filter_chains:
    - filters:
        name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: my-tcp-clients
          cluster: "httpbin"
  clusters:
  - name: httpbin
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin
                port_value: 80
